# ChereBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compos.yaml  manage.py  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_product_remove_botuser_user_id_botuser_language_and_more.py  0002_rename_phone_botuser_company_contact_and_more.py  0003_botuser_phone.py  0003_rename_company_employee_name_botuser_name_and_more.py  0004_product_operator_alter_botuser_name_and_more.py  0004_rename_name_botuser_company_employee_name_and_more.py  0005_botcompany_and_more.py  0005_operator_remove_product_operator.py  0006_remove_botcompany_language_remove_botuser_language.py  0006_waterproduct_remove_botuser_username_and_more.py  0007_remove_order_product_order_product_name_and_more.py  0007_rename_bot_company_order_bot_company_id_and_more.py  0008_ordercompany_orderuser_delete_order.py  0008_rename_user_order_user_id_remove_botuser_latitude_and_more.py  0009_botcompany_language_botuser_language.py  0010_remove_botcompany_language_remove_botuser_language.py
bot/: api.py  api_.py  config.py  constants.py  conustant.py  main.py  misc.py
bot/filters/: callback_data.py  enums.py  states.py
bot/header/: orders.py  register.py  start.py
bot/keyboard/: k_button.py  (+1 more)
bot_/: config.py  conustant.py
core/: asgi.py  settings.py  urls.py
orders/: admin.py  models.py  utils.py
payments/: models.py
products/: admin.py  models.py  signals.py
users/: admin.py  models.py
utils/: models.py
(+26 files in other folders)
